
  3. Fail-fast when creating `GoogleCloudStorageReadChannel` instance for
     non-existing GCS object.

  4. For gzip-encoded objects always return `Long.MAX_VALUE` size in
     `GoogleCloudStorageReadChannel.size()` method, until object will be
     fully read. This fixes a bug, when clients that rely on `size` method
     could stop reading object prematurely.


1.9.0 - 2018-06-15

  1. Update all dependencies to latest versions.

  2. Delete metadata cache functionality because Cloud Storage has strong
     native list operation consistency already. Deleted properties:

       fs.gs.metadata.cache.enable
       fs.gs.metadata.cache.type
       fs.gs.metadata.cache.directory
       fs.gs.metadata.cache.max.age.info.ms
       fs.gs.metadata.cache.max.age.entry.ms

  3. Decrease default value for max requests per batch from 1,000 to 30.

  4. Make max requests per batch value configurable with property:

       fs.gs.max.requests.per.batch (default: 30)

  5. Support Hadoop 3.

  6. Change Maven project structure to be better compatible with IDEs.

  7. Delete deprecated `GoogleHadoopGlobalRootedFileSystem`.

  8. Fix thread leaks that were occurring when YARN log aggregation uploaded
     logs to GCS.

  9. Add interface through which user can directly provide the access token.

  10. Add more retries and error handling in GoogleCloudStorageReadChannel,
      to make it more resilient to network errors; also add a property to allow users
      to specify number of retries on low level GCS HTTP requests in case of server
      errors and I/O errors.

  11. Add properties to allow users to specify connect timeout and read timeout on
      low level GCS HTTP requests.

  12. Include prefix/directory objects metadata into `storage.objects.list`
      requests response to improve performance (i.e. set
      `includeTrailingDelimiter` parameter for `storage.objects.list` GCS
      requests to `true`).


1.8.1 - 2018-03-29
